@@ -1,6 +1,7 @@
 todoyu core changelog
 
 core 2.1.0 - not released yet
+	* Feature: Added exclamation and email icons to core standard icons
 	* Feature: Added CSS for big (32x32px) confirmation icon
 	* Feature: Added array helper method that merges TodoyuArray::reform() and TodoyuArray::useFieldAsIndex() => TodoyuArray::reformWithFieldAsIndex()
 	* Feature: Added check for items existence before applying hooked callbacks on items (Todoyu.Hooks.exec())
